# gichan-formant

./: .gitignore  LICENSE  README.md  app_logger.py  build_base.py  compile_err.txt  compile_out.txt  config.py  errors.txt  main.py  pyproject.toml  refactor_ui.py  refactoring_analysis.md
.github/workflows/: ci.yml
core/: controller.py  preloader.py  state_manager.py  workers.py
docs/: draw_mode.md  layer_dock_refactor_plan.md  refactoring_analysis.md
draw/: __init__.py  draw_common.py  draw_line.py  draw_polygon.py  draw_reference.py  indicator.py
engine/: plot_engine.py
model/: data_processor.py
tests/: test_data_processor.py  test_math_utils.py
tools/: label_move.py  ruler.py
ui/: compare_plot.py  design_panel.py  display_utils.py  draw_design_panel.py  filter_panel.py  icon_widgets.py  label_manager.py  layer_dock.py  layer_logic.py  layer_row_widgets.py  layout_constants.py  main_window.py  popup_plot.py  tab_draw_view.py  tab_label_view.py  tool_indicator.py  vowel_analysis_dialog.py
ui/dialogs/: batch_save_dialog.py  file_guide.py  vowel_analysis_dialog.py
ui/widgets/: canvas_fixed.py  design_panel.py  draw_design_panel.py  draw_manager.py  filter_panel.py  icon_widgets.py  layer_data_model.py  layer_dock.py  layer_logic.py  layer_row_widgets.py  pillai_score_page.py  tab_draw_view.py  tab_label_view.py  tool_indicator.py
ui/windows/: base_plot_window.py  compare_plot.py  main_window.py  (+2 more)
utils/: color_utils.py  icon_utils.py  logger_setup.py  math_utils.py  path_prefs.py  pillai_stats.py  update_manager.py  vowel_sorting.py  vowel_stats.py
